hide non supported query params
